[package]
name = "bs_progress_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = { version = "0.5.0", features = ["cache"]}
prettytable-rs = "0.9.0"
reqwest = "0.11.13"
serde = "1.0.147"
tokio = { version = "1.23.1", features = ["full"] }
